# pretix-newsletter-ml

./: .gitlab-ci.yml  .update-locales  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
pretix_newsletter_ml/: __init__.py  apps.py  signals.py  tasks.py  urls.py  views.py
pretix_newsletter_ml/locale/: django.pot
pretix_newsletter_ml/locale/af/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/ar/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/ca/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/cs/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/da/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/de/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/de_Informal/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/el/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/es/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/fi/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/fr/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/hr/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/hu/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/it/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/ja/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/lb/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/lv/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/nl/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/nl_BE/LC_MESSAGES/: django.po
pretix_newsletter_ml/locale/nl_Informal/LC_MESSAGES/: django.po
pretix_newsletter_ml/templates/pretix_newsletter_ml/: settings.html
(+12 files in other folders)
